# cppAI

./: .gitignore  .layerClass.h.swp  .neurelNetworkClass.h.swp  .softmaxTest.cpp.swm  .softmaxTest.cpp.swn  .softmaxTest.cpp.swo  .softmaxTest.cpp.swo.swp  .softmaxTest.cpp.swp  CMakeLists.txt  aiCpp.cpp  array.h  array.hpp  arrayTest.cpp  cppHello.cpp  cppTest.cpp  findPixelValueTest.cpp  graphingTest.cpp  layer10000.cpp  layerClass.h  main.cpp  neurelNetworkClass.h  openglTest.cpp  randomCppTests.cpp  snakeGetPixels.cpp  softmaxTest.cpp  temp.cpp  test.asm  test.ilk  testasdadsa.cpp  thing.cpp
cudaTests/: CMakeLists.txt  cudaTestCpp.cu  main.cu
mainAi/: aiTests.cpp  array.h  arrayV2.h  arrayWrapper.h  cudaFuncs.h  environment.h  episode.h  layerClass.h  layerClassV2.h  neurelNetworkClass.h
openGlTests/: openGlTests.cpp  utilsHeader.h
randomTests/: aiCpp.cpp  arrayTest.cpp  backpropTest.cpp  cppTest.cpp  findPixelValueTest.cpp  graphingTest.cpp  layer10000.cpp  snakeGetPixels.cpp  softmaxTest.cpp
